--- a/lang/ru.json
+++ b/lang/ru.json
@@ -69,7 +69,7 @@
     "title": "Используем все самые лучшие передовые технологии"
   },
   "todaySections": {
-    "title": "Сегодня DigitalWand это:",
+    "title": "Сегодня DigitalAgency это:",
     "description": "Присоединяйся кнашей команде и построй успешную карьеру"
   },
   "careerHeroSection":{
